--- a/tests/all_tests_dist.htm
+++ b/tests/all_tests_dist.htm
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" media="all" href="../docs.css">
+        <link rel="stylesheet" media="all" href="../dist/editoria11y.min.css">
     </head>
 <body>
     <header>
