--- a/tests/warnings.htm
+++ b/tests/warnings.htm
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" media="all" href="../dist/editoria11y.min.css">
         <link rel="stylesheet" media="all" href="../docs.css">
     </head>
 <body>
@@ -9,7 +10,7 @@
         <h1 id="editoria11y-demo">Editoria11y Unit Tests</h1>
     </header>
     <main>
-               
+
         <section id="headings">
 
             <h2 id="heading-tests">Headings</h2>
@@ -37,12 +38,12 @@
             <script>
                 const ed11y = new Ed11y({
                     alertMode : 'assertive',
-                    shadowComponents : 'shadow-test, shadow-test-no-hits', 
-                    checkRoots : 'body', 
+                    shadowComponents : 'shadow-test, shadow-test-no-hits',
+                    checkRoots : 'body',
                     showDismissed : true,
                 });
             </script>
-            
+
         </div>
     </main>
 
