--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" media="all" href="../docs.css">
+        <link rel="stylesheet" media="all" href="../dist/editoria11y.min.css">
     </head>
 <body>
     <header>
