Tip positioning, abstract CSS bug fixes.

--- a/tests/warnings.htm
+++ b/tests/warnings.htm
@@ -41,6 +41,7 @@
                     shadowComponents : 'shadow-test, shadow-test-no-hits',
                     checkRoots : 'body',
                     showDismissed : true,
+                  theme: 'sleekTheme',
                 });
             </script>
 
