--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -421,8 +421,8 @@
           const ed11y = new Ed11y({
             alertMode : 'assertive',
             lang : 'en',
-            //baseFontSize: 16,
-            //theme : 'lightTheme',
+            //baseFontSize: 18,
+            theme : 'darkTheme',
             outlineExclude : '.utility',
             linkIgnoreStrings: /\(opens in new window\)|download/,
             linkIgnoreSelector: '.link-purpose',
