Bugfixes including tip and alt alignment.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -422,7 +422,7 @@
             alertMode : 'assertive',
             lang : 'en',
             //baseFontSize: 18,
-            theme : 'darkTheme',
+            theme : 'sleekTheme',
             outlineExclude : '.utility',
             linkIgnoreStrings: /\(opens in new window\)|download/,
             linkIgnoreSelector: '.link-purpose',
@@ -431,7 +431,7 @@
             shadowComponents : 'shadow-test, shadow-test-no-hits, turtle',
             hiddenHandlers : '#hidden-handler',
             checkRoots : 'main',
-            showDismissed : true,
+            //showDismissed : true,
             altPlaceholder: 'This image has an empty alt attribute;',
             // syncedDismissals : {},
             //allowOK: false,
