--- a/tests/warnings.htm
+++ b/tests/warnings.htm
@@ -40,7 +40,7 @@
                     alertMode : 'assertive',
                     shadowComponents : 'shadow-test, shadow-test-no-hits',
                     checkRoots : 'body',
-                    showDismissed : true,
+                    //showDismissed : true,
                   theme: 'sleekTheme',
                 });
             </script>
