--- a/tests/utilities.htm
+++ b/tests/utilities.htm
@@ -15,10 +15,20 @@
 
             <h2>Overflow</h2>
             <div class="positive" style="width: 1em; height: 1em; overflow: hidden;">
-                <h4 style="background: silver; padding: 1em; font-size: 14px;">This editor-only utility heading will be skipped in the outline</h3>
+                <h4 style="background: silver; padding: 1em; font-size: 14px;">This editor-only utility heading will be skipped in the outline</h4>
             </div>
 
 
+        </section>
+        <section id="hidden results">
+            <details>
+                <summary>oh hi</summary>
+                <a href="#">Click here</a>
+            </details>
+            <div style="visibility: hidden; position: absolute; top: -10000px">
+                Hidden issue.
+                <a href="#" hidden>Click here</a>
+            </div>
         </section>
 
         <section id="Custom tests">
@@ -32,7 +42,7 @@
 
             <h2>Exclusions</h2>
             <div class="utility">
-                <h4 style="background: silver; padding: 1em; font-size: 14px;">This editor-only utility heading will be skipped in the outline</h3>
+                <h4 style="background: silver; padding: 1em; font-size: 14px;">This editor-only utility heading will be skipped in the outline</h4>
             </div>
 
             <h3>Accessible name calculation in outline excluding hidden text <noscript>No script</noscript><style>.css-example {display: block;}</style>
