Better overlap handling

--- a/tests/utilities.htm
+++ b/tests/utilities.htm
@@ -14,6 +14,9 @@
         <section id="overflow">
 
             <h2>Overflow</h2>
+            <div>
+                <ul><li><a href>stack positioning</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li></ul>
+            </div>
             <div class="positive" style="width: 1em; height: 1em; overflow: hidden;">
                 <h4 style="background: silver; padding: 1em; font-size: 14px;">This editor-only utility heading will be skipped in the outline</h4>
             </div>
