don't double-flag download links

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -163,6 +163,7 @@
 
         <p>“Click here,” “learn more,” “download,” etc.</p>
 
+        <p class="positive"><a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">Download</a> But should only be yellow</p>
         <p class="positive"><a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">Click here</a></p>
         <p class="positive"><a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">More</a></p>
 
