--- a/tests/editable.htm
+++ b/tests/editable.htm
@@ -9,29 +9,16 @@
     <header>
         <h1 id="editoria11y-demo">Editoria11y Utility Functions</h1>
     </header>
-    <main>
+    <main contenteditable="true">
 
-        <section id="editable-region" contenteditable="true">
+        <section id="editable-region">
 
             <h2>Editable Region</h2>
             <div>
                 <ul><li><a href>stack positioning</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li></ul>
             </div>
-            <div class="positive" style="width: 1em; height: 1em; overflow: hidden;">
-                <h4 style="background: silver; padding: 1em; font-size: 14px;">This editor-only utility heading will be skipped in the outline</h4>
-            </div>
 
 
-        </section>
-        <section id="hidden results">
-            <details>
-                <summary>oh hi</summary>
-                <a href="#">Click here</a>
-            </details>
-            <div style="visibility: hidden; position: absolute; top: -10000px">
-                Hidden issue.
-                <a href="#" hidden>Click here</a>
-            </div>
         </section>
 
         <section id="Custom tests">
@@ -78,9 +65,22 @@
             </div>
         </section>
 
+        <section id="hidden results">
+            <details>
+                <summary>oh hi</summary>
+                <a href="#">Click here</a>
+            </details>
+
+            <div class="positive" style="width: 1em; height: 1em; overflow: hidden;">
+                <h4 style="background: silver; padding: 1em; font-size: 14px;">This editor-only utility heading will be skipped in the outline</h4>
+            </div>
+            <div style="visibility: hidden; position: absolute; top: -10000px">
+                Hidden issue.
+                <a href="#" hidden>Click here</a>
+            </div>
+        </section>
+
         <section id="Hidden tips">
-
-
 
             <h2 id="hiding-tests">Hidden element handlers</h2>
 
