--- a/tests/editable.htm
+++ b/tests/editable.htm
@@ -11,9 +11,12 @@
     </header>
     <main>
 
-        <section id="editable-region" contenteditable="true">
+        <section id="editable-region" contenteditable="true" style="max-height: 10em; overflow-y: auto; width: calc(100%-5rem); padding: 0 2.5rem; outline: 1px solid;">
 
             <h2>Editable Regions</h2>
+            <p><a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a></p>
+            <p><a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a></p>
+            <p><a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a></p>
             <p><a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a></p>
             <div>
                 <ul><li><a href>stack positioning</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li></ul>
@@ -23,7 +26,7 @@
         </section>
         <section id="not-editable-region" contenteditable="false">
 
-            <h2>Editable Regions</h2>
+            <h2>Non-editable Regions</h2>
             <p><a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a></p>
             <div>
                 <ul><li><a href>stack positioning</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li></ul>
