--- a/tests/editable.htm
+++ b/tests/editable.htm
@@ -14,9 +14,9 @@
         <section id="editable-region" contenteditable="true" style="max-height: 20em; overflow-y: auto; width: calc(100%-5rem); padding: 0 2.5rem; outline: 1px solid;">
 
             <h2>Editable Regions</h2>
+            <p>This is a big paragraph with a big link. <a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a> We don't have much more to say about that.</p>
             <p><a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a></p>
-            <p><a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a></p>
-            <p><a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a></p>
+            <p>This is a big paragraph with a some small links. <a href="#">https://small link.</a> This is a big paragraph with a some small links. <a href="#">https://small link.</a> This is a big paragraph with a some small links. <a href="#">https://small link.</a></p>
             <p><a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a></p>
             <div>
                 <ul><li><a href>stack positioning</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li></ul>
