compile demo code.

--- a/tests/editable.htm
+++ b/tests/editable.htm
@@ -62,7 +62,7 @@
 
 
         </section>
-        <script src="tinymce/js/tinymce/tinymce.min.js" referrerpolicy="origin"></script>
+        <script src=" https://cdn.jsdelivr.net/npm/tinymce@7.1.2/tinymce.min.js "></script>
         <script>tinymce.init({
           selector: '#editable-region',  // change this value according to your HTML
           license_key: 'gpl',
@@ -97,6 +97,9 @@
 
         <div hidden>
             <link href="./tests.css" rel="stylesheet">
+            <!--
+            <script src="../dist/editoria11y.min.js"></script>
+            -->
             <script src="../js/ed11y-localization.js"></script>
             <script src="../js/ed11y-element-panel.js"></script>
             <script src="../js/ed11y-element-result.js"></script>
