--- a/tests/editable.htm
+++ b/tests/editable.htm
@@ -12,18 +12,26 @@
     <main>
 
         <section id="editable-region" contenteditable="true" style="max-height: 36em; overflow-y: auto; width: calc(100% - 5rem); padding: 10px 2.5rem; margin: 1rem 0 5rem; box-shadow: 0px 0px 0 1px #777, inset 1px 1px 3px; border-radius: 3px;">
+            <p>This is an editable region -- click in to see the TinyMCE interface appear. Add and delete content, create and fix issues.
+            The easiest way to get a new tip to appear is to type a sentence in caps lock.</p>
+            <p>Some things you might notice that I'd especially like thoughts on:</p>
+            <ul><li>Tips will fade out when you click into paragraphs, to prevent tips covering where you are typing.</li>
+            <li>There's a fairly long hesitation (~1s) between checks. This greatly helps with performance, but...is it a good balance of performance and frequency?</li>
+            </ul>
+            <p>Some things that are unfinished but known...</p>
+            <ul><li>Tip drawing and fade-out when outside the editable container is half-finished -- you may notice it taking a moment for tips to align, or offscreen tips messing with the page's scrollbar.</li>
+                <li>The minimized main panel looks the same when it is minimized and when it is off. I need to add a third state to differentiate.
+                </li><li>The tips have a new button after the [?] that moves the cursor to where the issue is. That probably needs a better label or position. I have considered keeping it as an icon and putting it up at the top of the modal with the [x], or changing it to spell out a label like "Edit text" or "Select issue."</li></ul>
+            <h2>Sample issues</h2>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test because it starts with https.</a></p>
+            <img style="float: right; width: 50%;" class='click-in-css' src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 240 120'%3E%3Crect width='240' height='120' fill='%23cccccc'%3E%3C/rect%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='monospace' font-size='26px' fill='%23333333'%3EImage%3C/text%3E%3C/svg%3E"><p style="margin-top: 2rem;">This floating image has no alt text:</p><hr>
 
-            <h2>Editable Regions</h2>
-            <img style="float: right; width: 50%;" class='click-in-css' src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 240 120'%3E%3Crect width='240' height='120' fill='%23cccccc'%3E%3C/rect%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='monospace' font-size='26px' fill='%23333333'%3EImage%3C/text%3E%3C/svg%3E"><p>Floating image:</p>
-            <p>This is a big paragraph with a big link. <a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a> We don't have much more to say about that.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            <p>This is a big paragraph with a some small links. <a href="#">https://small link.</a> This is a big paragraph with a some small links. <a href="#">https://small link.</a> This is a big paragraph with a some small links. <a href="#">https://small link.</a></p>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-            <p><a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a></p>
-            <div class="posi"><h4 id="a-very-long-heading">Suspiciously long heading. Headings should not be used for emphasis, but rather for a document outline, so if you find yourself talking this much, this probably is being used for visual formatting, not a heading.</h4>
+            <p>This is a big paragraph with several alerts that place their tips fairly close together:, <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">click here</a>, and <a href="#">https://princeton.edu,</a> and <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">""</a></p>
+
+
+            <div class="posi"><h4 id="a-very-long-heading">Suspiciously long heading with two alerts. Headings should not be used for emphasis, but rather for a document outline, so if you find yourself talking this much, this probably is being used for visual formatting, not a heading.</h4>
             </div>
-            <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."</p>
-            <p><a href="#">https://This link is going to wrap on to a lot of lines because it has a lot of text, and it is going to trip the https test.</a></p>
+
             <h2 id="tables">Tables</h2>
 
             <h3 id="tables-without-valid-headers">Tables without valid headers</h3>
@@ -32,33 +40,11 @@
 
             <table class="negati" role="presentation"><tr><td>No table header, but table has role="presentation."</td></tr></table>
 
-            <table class="negati"><thead>
-            <tr>
-                <th><p>Numbers in tables</p></th>
-                <th><p>Should not be checked for lists</p>
-                </th>
-            </tr>
-            </thead>
-                <tbody>
-                <tr>
-                    <th>   <p>1.</p>
-                    </th>
-                    <td>   <p>2. Turtles</p>
-                    </td>
-                </tr>
-                <tr>
-                    <th>   <p>2.</p>
-                    </th>
-                    <td>   <p>Bears</p>
-                    </td>
-
-                </tr>
-                </tbody>
-            </table>
             <h3 id="empty-table-header-cells">Empty table header cells</h3>
 
             <table><tbody><tr><th>Empty table heading cells will also be flagged:</th><th class="posi"> &nbsp;</th></tr></tbody></table>
-            <ul><li><a href>stack positioning</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>an ok one</a></li><li><a href>this is fine</a></li></ul>
+            <h2>Position collisions</h2>
+            <ul><li>There are five alerts here and the buttons don't fit; the collision detection is moving them off each other too far, so several are only reachable via the main panel "next" button. Need to improve collision handling.</li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li><li><a href>click here</a></li></ul>
 
 
         </section>
@@ -161,7 +147,6 @@
                       'a': '[aria-hidden][tabindex]', // disable link text check on properly disabled links
                     },
                     ignoreElements: '.tox-editor-header *',
-                    shadowComponents : 'shadow-test, shadow-test-no-hits',
                     hiddenHandlers : '[hidden]',
                     //inlineAlerts : false,
                     checkRoots : 'body',
