--- a/tests/editable.htm
+++ b/tests/editable.htm
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" media="all" href="../dist/editoria11y.min.css">
+        <link rel="stylesheet" media="all" href="../css/editoria11y.css">
         <title>Live Editing Tests</title>
     </head>
 <body>
