--- a/tests/pass.htm
+++ b/tests/pass.htm
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" media="all" href="../docs.css">
-        <link rel="stylesheet" media="all" href="../dist/editoria11y.min.css">
+        <link rel="stylesheet" media="all" href="../css/editoria11y.css">
     </head>
 <body>
     <header>
