--- a/tests/editable.htm
+++ b/tests/editable.htm
@@ -56,7 +56,7 @@
         });
 
         </script>
-        <!--
+
                 <section id="not-editable-region">
 
                     <h2>Non-editable Regions</h2>
@@ -71,7 +71,7 @@
 
                 </section>
 
-                <section id="Custom tests" contenteditable="true">
+<!--                <section id="Custom tests" contenteditable="true">
                     <h2 id="customtest">Custom tests</h2>
                     <p class="posi">
                         <a href="https://nam12.safelinks.protection.outlook.com/?url=https%3A%2F%2Fwds.princeton.edu%2F">Safelink</a>
